# jira-mcp

./: .env.example  README.md  package-lock.json  package.json  pyproject.toml  test-smoke.mjs
jira_mcp/: formatters.py  jira_client.py  server.py
src/: formatters.ts  index.ts  jira-client.ts
src/tools/: comments.ts  issues.ts  links.ts  projects.ts  search.ts  sprints.ts  transitions.ts
