[project]
name = "jira-mcp"
version = "0.2.0"
description = "MCP server for Jira Cloud"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
jira-mcp = "jira_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
